--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>TranSpec3D</h1>
+    <a href="TranSpec3D/contact.html">contact</a>
     <p>Real-world data set with transparent and specular objects.</p>
+    <img src="image/basics.png" alt="Ground truth of data set created without object preparation (right).">
 </body>
 </html>
