--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TranSpec3D</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>TranSpec3D</h1>
-    <a href="TranSpec3D/contact.html">contact</a>
+    <a href="contact.html">contact</a>
     <p>Real-world data set with transparent and specular objects.</p>
-    <img src="image/basics.png" alt="Ground truth of data set created without object preparation (right).">
+    <img src="image/basics.png" alt="Ground truth of data set created without object preparation (right)." width="300" height="200">
 </body>
 </html>
