--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>TranSpec3D</h1>
     <a href="contact.html">contact</a>
     <p>Real-world data set with transparent and specular objects.</p>
-    <img src="image/basics.png" alt="Ground truth of data set created without object preparation (right)." width="300" height="200">
+    <img src="image/basics.png" alt="Ground truth of data set created without object preparation (right)." width="400">
 </body>
 </html>
