--- a/index.html
+++ b/index.html
@@ -2,13 +2,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TranSpec3D</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!-- Kopfzeile
+    <div class="logo-container">
+        <img src="logo-firma1.png" alt="TUIL" class="logo">
+        <img src="logo-firma2.png" alt="IOF" class="logo">
+    </div>
+-->
+
     <h1>TranSpec3D</h1>
     <a href="contact.html">contact</a>
+
     <p>Real-world data set with transparent and specular objects.</p>
     <img src="image/basics.png" alt="Ground truth of data set created without object preparation (right)." width="400">
+    <hr> 
+    <p>Page in progress...</p>
 </body>
 </html>
